# de-bureau-project

./: .gitignore  README.md  destroy-bq-datasets.sh  docker-compose.yml  run-terraform.sh
dbt/: .user.yml  Dockerfile  dbt_project.yml  profiles.yml  pyproject.toml
dbt/macros/: date_to_yearmonth.sql
dbt/models/marts/: dim_offices.sql  fct_applications_per_state.sql  fct_count_month_state.sql  fct_monto_per_state.sql  fct_num_consultas.sql  fct_num_cuentas_abiertas.sql  fct_num_domicilios.sql
dbt/models/staging/: sources.yml  stg_applications.sql  stg_consultas.sql  stg_cuentas.sql  stg_domicilios.sql  stg_personas.sql
dbt/scripts/: seed_from_gcs.sh
dbt/seeds/: offices.csv  seeds_properties.yml
ingestion/: Dockerfile  ingestar_circulo_credito.py  producer_cc.py  pyproject.toml
streamlit/: Dockerfile  app.py  mexico_geojson.py  pyproject.toml
terraform/gcs-bucket/: main.tf  outputs.tf  provider.tf  terraform.tfvars  variables.tf
